--- a/public/articles-news.html
+++ b/public/articles-news.html
@@ -424,19 +424,19 @@
           <div class="bg-white w-max h-8 lg:h-[2.375rem] flex items-center font-semibold text-center text-15 border rounded-md overflow-hidden mt-5 lg:mt-8 mx-auto">
             <!-- Previous -->
             <button
-              class="text-brand-black-300 w-20 lg:w-24 h-42 transition duration-200 hover:bg-gray-100 border-r px-2.5 py-1">Previous</button>
+              class="w-20 lg:w-24 h-42 transition duration-200 hover:bg-gray-100 border-r px-2.5 py-1">Previous</button>
 
             <button
-              class="text-brand-black-300 w-10 h-full transition duration-200 hover:bg-gray-100 border-r px-2.5 py-1">1</button>
+              class="w-10 h-full transition duration-200 hover:bg-gray-100 border-r px-2.5 py-1">1</button>
 
             <button
-              class="text-brand-black-300 w-10 h-full transition duration-200 hover:bg-gray-100 border-r px-2.5 py-1">2</button>
+              class="w-10 h-full transition duration-200 hover:bg-gray-100 border-r px-2.5 py-1">2</button>
 
             <button
-              class="text-brand-black-300 w-10 h-full transition duration-200 hover:bg-gray-100 border-r px-2.5 py-1">3</button>
+              class="w-10 h-full transition duration-200 hover:bg-gray-100 border-r px-2.5 py-1">3</button>
             <!-- Next btn -->
             <button
-              class="text-brand-black-300 w-20 lg:w-24 h-42 transition duration-200 hover:bg-gray-100 border-l px-2.5 py-1">Next</button>
+              class="w-20 lg:w-24 h-42 transition duration-200 hover:bg-gray-100 border-l px-2.5 py-1">Next</button>
           </div>
         </section>
       </div>
