--- a/public/lichniy-kabinet.html
+++ b/public/lichniy-kabinet.html
@@ -145,7 +145,7 @@
             <!-- Mobile Menu Bars -->
             <div class="flex lg:hidden items-center gap-3">
               <!-- Search -->
-              <button class="shrink-0 text-brand-black-400 transition duration-200 hover:text-brand-green-400">
+              <button class="block md:hidden  shrink-0 text-brand-black-400 transition duration-200 hover:text-brand-green-400">
                 <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path
                     d="M14.375 8.125C14.375 7.00521 14.1016 5.96354 13.5547 5C12.9818 4.03646 12.2135 3.26823 11.25 2.69531C10.2604 2.14844 9.21875 1.875 8.125 1.875C7.03125 1.875 5.98958 2.14844 5 2.69531C4.03646 3.26823 3.26823 4.03646 2.69531 5C2.14844 5.96354 1.875 7.00521 1.875 8.125C1.875 9.24479 2.14844 10.2865 2.69531 11.25C3.26823 12.2135 4.03646 12.9818 5 13.5547C5.98958 14.1016 7.03125 14.375 8.125 14.375C9.21875 14.375 10.2604 14.1016 11.25 13.5547C12.2135 12.9818 12.9818 12.2135 13.5547 11.25C14.1016 10.2865 14.375 9.24479 14.375 8.125ZM13.1641 14.4922C11.7578 15.638 10.0781 16.224 8.125 16.25C5.83333 16.1979 3.91927 15.4036 2.38281 13.8672C0.846354 12.3307 0.0520833 10.4167 0 8.125C0.0520833 5.83333 0.846354 3.91927 2.38281 2.38281C3.91927 0.846354 5.83333 0.0520833 8.125 0C10.4167 0.0520833 12.3307 0.846354 13.8672 2.38281C15.4036 3.91927 16.1979 5.83333 16.25 8.125C16.224 10.0781 15.638 11.7578 14.4922 13.1641L19.7266 18.3984C20.0911 18.8411 20.0911 19.2839 19.7266 19.7266C19.2839 20.0911 18.8411 20.0911 18.3984 19.7266L13.1641 14.4922Z"
@@ -195,7 +195,7 @@
         <!-- Orders -->
         <div class="flex flex-col lg:flex-row gap-5 lg:gap-30 mt-6">
           <!-- Left -->
-           <div class="w-full lg:max-w-64 bg-white whitespace-nowrap overflow-x-auto no-scroll px-4 lg:px-0">
+           <div class="h-max w-full lg:max-w-64 bg-white whitespace-nowrap overflow-x-auto no-scroll px-4 lg:px-0">
              <div
                class="flex lg:block w-full h-max rounded-md text-sm lg:text-base text-brand-gray-900 py-3">
                <a class="block bg-brand-green-100 py-2 px-4" href="#">
