--- a/public/index.html
+++ b/public/index.html
@@ -145,7 +145,8 @@
             <!-- Mobile Menu Bars -->
             <div class="flex lg:hidden items-center gap-3">
               <!-- Search -->
-              <button class="shrink-0 text-brand-black-400 transition duration-200 hover:text-brand-green-400">
+              <button
+                class="block md:hidden  shrink-0 text-brand-black-400 transition duration-200 hover:text-brand-green-400">
                 <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path
                     d="M14.375 8.125C14.375 7.00521 14.1016 5.96354 13.5547 5C12.9818 4.03646 12.2135 3.26823 11.25 2.69531C10.2604 2.14844 9.21875 1.875 8.125 1.875C7.03125 1.875 5.98958 2.14844 5 2.69531C4.03646 3.26823 3.26823 4.03646 2.69531 5C2.14844 5.96354 1.875 7.00521 1.875 8.125C1.875 9.24479 2.14844 10.2865 2.69531 11.25C3.26823 12.2135 4.03646 12.9818 5 13.5547C5.98958 14.1016 7.03125 14.375 8.125 14.375C9.21875 14.375 10.2604 14.1016 11.25 13.5547C12.2135 12.9818 12.9818 12.2135 13.5547 11.25C14.1016 10.2865 14.375 9.24479 14.375 8.125ZM13.1641 14.4922C11.7578 15.638 10.0781 16.224 8.125 16.25C5.83333 16.1979 3.91927 15.4036 2.38281 13.8672C0.846354 12.3307 0.0520833 10.4167 0 8.125C0.0520833 5.83333 0.846354 3.91927 2.38281 2.38281C3.91927 0.846354 5.83333 0.0520833 8.125 0C10.4167 0.0520833 12.3307 0.846354 13.8672 2.38281C15.4036 3.91927 16.1979 5.83333 16.25 8.125C16.224 10.0781 15.638 11.7578 14.4922 13.1641L19.7266 18.3984C20.0911 18.8411 20.0911 19.2839 19.7266 19.7266C19.2839 20.0911 18.8411 20.0911 18.3984 19.7266L13.1641 14.4922Z"
@@ -187,14 +188,74 @@
       <div class="max-w-base mx-auto px-4 md:px-7">
         <!-- Hero -->
         <section
-          class="relative h-full flex items-center justify-center w-full aspect-video sm:aspect-[1110/400] overflow-hidden rounded-md mt-5 lg:mt-30 px-4">
-          <div class="relative max-w-xl text-center z-10">
-            <h1 class="text-white text-40 md:text-6xl lg:text-[5rem] leading-[1]">
-              Акционный баннер
-            </h1>
+          class="relative h-full flex items-center justify-center w-full aspect-video sm:aspect-[1110/400] overflow-hidden rounded-md mt-5 px-4">
+          <div class="relative z-10 w-full max-w-[33.875rem] mx-auto">
+            <div
+              class="bg-white rounded-md overflow-hidden h-10 lg:h-14 w-full flex items-center justify-between shadow-lg">
+              <!-- Search Input -->
+              <input
+                class="flex-1 w-full h-full text-15 text-brand-black-400 outline-none px-4 placeholder:text-gray-400"
+                type="search" name="search" placeholder="Найти любимый вкус">
+              <!-- Dropdown -->
+              <div class="hidden sm:block w-36 h-full">
+                <button
+                  class="text-left !text-brand-black-400 h-full border-l flex items-center gap-x-10 transition duration-200 hover:text-brand-green-400 px-2">
+                  <span class="whitespace-nowrap text-sm lg:text-base">Все сорта</span>
+                  <svg width="12" height="6" viewBox="0 0 12 6" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M0.75 0.5L6 5.75L11.25 0.5H0.75Z"
+                      fill="currentColor" />
+                  </svg>
+                </button>
+              </div>
+              <!-- Search Button -->
+              <div class="max-w-[3.625rem] w-full h-full">
+                <button
+                  class="w-full h-full border-l flex items-center justify-center text-brand-black-400 transition duration-200 hover:text-brand-green-400 px-5">
+                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                    stroke="currentColor" class="w-5 h-5">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                      d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z" />
+                  </svg>
+                </button>
+              </div>
+            </div>
+
+            <!-- Categories Buttons -->
+            <div class="overflow-x-auto no-scroll mt-2">
+              <div class="flex items-center gap-2 whitespace-nowrap text-gray-700">
+                <!-- 1 -->
+                <button
+                  class="h-6 bg-white transition duration-200 hover:text-green-500 flex items-center gap-1 rounded px-2 shadow">
+                  <svg width="12" height="14" viewBox="0 0 12 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                      d="M2.25977 4.58594C1.59961 5.73698 1.2526 6.81185 1.21875 7.81055C1.2526 9.14779 1.68424 10.2396 2.51367 11.0859C3.3431 11.9323 4.40104 12.3724 5.6875 12.4062C6.95703 12.3724 8.00651 11.9323 8.83594 11.0859C9.68229 10.2396 10.1224 9.14779 10.1562 7.81055C10.1393 7.01497 9.89388 6.10938 9.41992 5.09375C8.97982 4.16276 8.4974 3.41797 7.97266 2.85938C7.87109 2.97786 7.7526 3.13867 7.61719 3.3418C7.58333 3.37565 7.55794 3.40951 7.54102 3.44336C7.49023 3.51107 7.44792 3.57031 7.41406 3.62109C7.38021 3.67188 7.35482 3.71419 7.33789 3.74805C7.23633 3.86654 7.16016 3.97656 7.10938 4.07812C6.97396 4.23047 6.81315 4.30664 6.62695 4.30664C6.42383 4.30664 6.26302 4.23047 6.14453 4.07812C6.09375 4.02734 6.04297 3.9681 5.99219 3.90039C5.94141 3.84961 5.89909 3.79036 5.86523 3.72266C5.84831 3.70573 5.83138 3.6888 5.81445 3.67188C5.57747 3.35026 5.32357 3.03711 5.05273 2.73242C4.79883 2.41081 4.56185 2.13151 4.3418 1.89453C3.59701 2.60547 2.90299 3.5026 2.25977 4.58594ZM5.07812 0.929688C5.3151 1.14974 5.56055 1.42057 5.81445 1.74219C6.08529 2.0638 6.33919 2.37695 6.57617 2.68164L6.60156 2.63086C6.80469 2.3431 7.01628 2.08919 7.23633 1.86914C7.45638 1.66602 7.70182 1.56445 7.97266 1.56445C8.24349 1.56445 8.48893 1.66602 8.70898 1.86914C9.04753 2.20768 9.3776 2.61393 9.69922 3.08789C10.0039 3.56185 10.2832 4.0612 10.5371 4.58594C10.791 5.11068 10.9941 5.65234 11.1465 6.21094C11.2988 6.76953 11.375 7.30273 11.375 7.81055C11.3411 9.4694 10.791 10.8405 9.72461 11.9238C8.6582 13.0241 7.3125 13.5911 5.6875 13.625C4.04557 13.5911 2.69987 13.0241 1.65039 11.9238C0.583984 10.8405 0.0338542 9.4694 0 7.81055C0 7.16732 0.11849 6.52409 0.355469 5.88086C0.575521 5.2207 0.863281 4.5944 1.21875 4.00195C1.55729 3.39258 1.93815 2.82552 2.36133 2.30078C2.76758 1.75911 3.18229 1.30208 3.60547 0.929688C3.82552 0.726562 4.07096 0.625 4.3418 0.625C4.61263 0.625 4.85807 0.726562 5.07812 0.929688ZM5.73828 11.1875C4.90885 11.1875 4.22331 10.9421 3.68164 10.4512C3.13997 9.97721 2.86068 9.30013 2.84375 8.41992C2.84375 8.04753 2.95378 7.66667 3.17383 7.27734C3.37695 6.88802 3.69857 6.42253 4.13867 5.88086C4.3418 5.69466 4.54492 5.70312 4.74805 5.90625C4.98503 6.19401 5.25586 6.53255 5.56055 6.92188C5.86523 7.3112 6.1276 7.64128 6.34766 7.91211C6.55078 8.11523 6.76237 8.1237 6.98242 7.9375L7.61719 7.20117C7.83724 6.99805 8.0319 7.01497 8.20117 7.25195C8.50586 7.86133 8.59896 8.47917 8.48047 9.10547C8.34505 9.7487 8.01497 10.265 7.49023 10.6543C6.94857 11.0098 6.36458 11.1875 5.73828 11.1875Z"
+                      fill="#EB5757" />
+                  </svg>
+                  <span class="text-xs">Популярное</span>
+                </button>
+                <!-- 2 -->
+                <button class="h-6 bg-white transition duration-200 hover:text-green-500 rounded px-2 shadow">
+                  <span class="text-xs">Черный чай</span>
+                </button>
+                <!-- 3 -->
+                <button class="h-6 bg-white transition duration-200 hover:text-green-500 rounded px-2 shadow">
+                  <span class="text-xs">Улун</span>
+                </button>
+                <!-- 4 -->
+                <button class="h-6 bg-white transition duration-200 hover:text-green-500 rounded px-2 shadow">
+                  <span class="text-xs">Пуэр</span>
+                </button>
+                <!-- 5 -->
+                <button class="h-6 bg-white transition duration-200 hover:text-green-500 rounded px-2 shadow">
+                  <span class="text-xs">Фруктовый</span>
+                </button>
+              </div>
+            </div>
           </div>
-          <div class="absolute h-full top-0 left-0 z-0">
-            <img class="size-full object-cover" src="./img/image-hero__1.png" alt="image-hero__1">
+
+          <!-- Background Image -->
+          <div class="absolute h-full top-0 left-0 z-0 w-full">
+            <img class="w-full h-full object-cover" src="./img/image-hero__1.png" alt="image-hero__1">
           </div>
         </section>
         <!-- Catalog -->
