--- a/public/product.html
+++ b/public/product.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <title>Вкусовой профиль</title>
   </head>
 
@@ -144,7 +145,7 @@
             <!-- Mobile Menu Bars -->
             <div class="flex lg:hidden items-center gap-3">
               <!-- Search -->
-              <button class="shrink-0 text-brand-black-400 transition duration-200 hover:text-brand-green-400">
+              <button class="block md:hidden  shrink-0 text-brand-black-400 transition duration-200 hover:text-brand-green-400">
                 <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path
                     d="M14.375 8.125C14.375 7.00521 14.1016 5.96354 13.5547 5C12.9818 4.03646 12.2135 3.26823 11.25 2.69531C10.2604 2.14844 9.21875 1.875 8.125 1.875C7.03125 1.875 5.98958 2.14844 5 2.69531C4.03646 3.26823 3.26823 4.03646 2.69531 5C2.14844 5.96354 1.875 7.00521 1.875 8.125C1.875 9.24479 2.14844 10.2865 2.69531 11.25C3.26823 12.2135 4.03646 12.9818 5 13.5547C5.98958 14.1016 7.03125 14.375 8.125 14.375C9.21875 14.375 10.2604 14.1016 11.25 13.5547C12.2135 12.9818 12.9818 12.2135 13.5547 11.25C14.1016 10.2865 14.375 9.24479 14.375 8.125ZM13.1641 14.4922C11.7578 15.638 10.0781 16.224 8.125 16.25C5.83333 16.1979 3.91927 15.4036 2.38281 13.8672C0.846354 12.3307 0.0520833 10.4167 0 8.125C0.0520833 5.83333 0.846354 3.91927 2.38281 2.38281C3.91927 0.846354 5.83333 0.0520833 8.125 0C10.4167 0.0520833 12.3307 0.846354 13.8672 2.38281C15.4036 3.91927 16.1979 5.83333 16.25 8.125C16.224 10.0781 15.638 11.7578 14.4922 13.1641L19.7266 18.3984C20.0911 18.8411 20.0911 19.2839 19.7266 19.7266C19.2839 20.0911 18.8411 20.0911 18.3984 19.7266L13.1641 14.4922Z"
@@ -345,7 +346,7 @@
                   <p class="text-xs lg:text-15">Итого:</p>
                   <div class="flex gap-3.5">
                     <h2>1 450 ₽</h2>
-                    <span class="font-medium text-brand-black-300 text-base">1 850 ₽</span>
+                    <span class="font-medium text-brand-black-300 text-base line-through">1 850 ₽</span>
                   </div>
                   <div class="flex flex-wrap lg:flex-nowrap items-center gap-x-2 gap-y-4">
                     <!-- Quantity Selector -->
@@ -413,7 +414,7 @@
             </div>
             <!-- Right -->
             <div class="w-full max-w-[20.5rem] overflow-hidden">
-              <img class="size-full object-cover" src="./img/image-flavor.png" alt="Flavor">
+              <canvas class="w-full" id="myRadarChart" width="400" height="400"></canvas>
             </div>
           </div>
         </section>
@@ -571,7 +572,7 @@
           <!-- Items -->
           <div class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-4 gap-4 lg:gap-30 mt-4 lg:mt-6">
             <!-- Item 1 -->
-                        <div class="bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
+            <div class="bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
               <div class="flex justify-between gap-5">
                 <button
                   class="bg-brand-green-400 text-white rounded h-max font-medium text-10 md:text-xs/3 px-2 py-1.5">
@@ -613,7 +614,7 @@
               </div>
             </div>
             <!-- Item 2 -->
-                        <div class="bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
+            <div class="bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
               <div class="flex justify-between gap-5">
                 <button
                   class="bg-brand-green-400 text-white rounded h-max font-medium text-10 md:text-xs/3 px-2 py-1.5">
@@ -655,7 +656,7 @@
               </div>
             </div>
             <!-- Item 3 -->
-                        <div class="bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
+            <div class="bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
               <div class="flex justify-between gap-5">
                 <button
                   class="bg-brand-green-400 text-white rounded h-max font-medium text-10 md:text-xs/3 px-2 py-1.5">
@@ -697,7 +698,7 @@
               </div>
             </div>
             <!-- Item 4 -->
-                        <div class="bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
+            <div class="bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
               <div class="flex justify-between gap-5">
                 <button
                   class="bg-brand-green-400 text-white rounded h-max font-medium text-10 md:text-xs/3 px-2 py-1.5">
@@ -1018,7 +1019,8 @@
                       </div>
                     </div>
                     <!-- Submit -->
-                    <button class="button-green w-full xs:w-max !rounded-md font-medium text-sm lg:text-base/[1.125rem] px-6 py-2 xs:py-3">
+                    <button
+                      class="button-green w-full xs:w-max !rounded-md font-medium text-sm lg:text-base/[1.125rem] px-6 py-2 xs:py-3">
                       Отправить
                     </button>
                   </div>
@@ -1034,7 +1036,7 @@
           <!-- Items -->
           <div class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-4 gap-4 lg:gap-30 mt-4 lg:mt-6">
             <!-- Item 1 -->
-                        <div class="bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
+            <div class="bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
               <div class="flex justify-between gap-5">
                 <button
                   class="bg-brand-green-400 text-white rounded h-max font-medium text-10 md:text-xs/3 px-2 py-1.5">
@@ -1076,7 +1078,7 @@
               </div>
             </div>
             <!-- Item 2 -->
-                        <div class="bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
+            <div class="bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
               <div class="flex justify-between gap-5">
                 <button
                   class="bg-brand-green-400 text-white rounded h-max font-medium text-10 md:text-xs/3 px-2 py-1.5">
@@ -1118,7 +1120,7 @@
               </div>
             </div>
             <!-- Item 3 -->
-                        <div class="bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
+            <div class="bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
               <div class="flex justify-between gap-5">
                 <button
                   class="bg-brand-green-400 text-white rounded h-max font-medium text-10 md:text-xs/3 px-2 py-1.5">
@@ -1160,7 +1162,7 @@
               </div>
             </div>
             <!-- Item 4 -->
-                        <div class="bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
+            <div class="bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
               <div class="flex justify-between gap-5">
                 <button
                   class="bg-brand-green-400 text-white rounded h-max font-medium text-10 md:text-xs/3 px-2 py-1.5">
@@ -1210,7 +1212,7 @@
           <!-- Items -->
           <div class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-4 gap-4 lg:gap-30 mt-4 lg:mt-6">
             <!-- Item 1 -->
-                        <div class="bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
+            <div class="bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
               <div class="flex justify-between gap-5">
                 <button
                   class="bg-brand-green-400 text-white rounded h-max font-medium text-10 md:text-xs/3 px-2 py-1.5">
@@ -1252,7 +1254,7 @@
               </div>
             </div>
             <!-- Item 2 -->
-                        <div class="bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
+            <div class="bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
               <div class="flex justify-between gap-5">
                 <button
                   class="bg-brand-green-400 text-white rounded h-max font-medium text-10 md:text-xs/3 px-2 py-1.5">
@@ -1294,7 +1296,7 @@
               </div>
             </div>
             <!-- Item 3 -->
-                        <div class="bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
+            <div class="bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
               <div class="flex justify-between gap-5">
                 <button
                   class="bg-brand-green-400 text-white rounded h-max font-medium text-10 md:text-xs/3 px-2 py-1.5">
@@ -1336,7 +1338,7 @@
               </div>
             </div>
             <!-- Item 4 -->
-                        <div class="bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
+            <div class="bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
               <div class="flex justify-between gap-5">
                 <button
                   class="bg-brand-green-400 text-white rounded h-max font-medium text-10 md:text-xs/3 px-2 py-1.5">
@@ -1469,6 +1471,77 @@
         </div>
       </div>
     </footer>
+
+
+    <script>
+      const ctx = document.getElementById('myRadarChart').getContext('2d');
+      const myRadarChart = new Chart(ctx, {
+        type: 'radar',
+        data: {
+          labels: ['INNOVATION', 'INITIATION', 'SUPPORT', 'COORDINATION', 'FOCUS', 'DELIVERY', 'COMPLETION', 'EVALUATION'],
+          datasets: [{
+            label: 'Performance',
+            data: [80, 70, 80, 40, 40, 40, 60, 30],
+            backgroundColor: 'rgba(255, 206, 86, 0.2)',
+            borderColor: 'rgba(255, 159, 64, 1)',
+            borderWidth: 2,
+            pointBackgroundColor: 'rgba(255, 159, 64, 1)',
+            pointBorderColor: '#fff',
+          }]
+        },
+        options: {
+          scales: {
+            r: {
+              angleLines: {
+                color: '#e3e3e3'
+              },
+              suggestedMin: 0,
+              suggestedMax: 100,
+              pointLabels: {
+                font: {
+                  size: 10
+                }
+              },
+              ticks: {
+                color: 'rgba(0, 0, 0, 0)',
+                backdropColor: 'transparent',
+                borderWidth: 0
+              }
+            }
+          },
+          hover: {
+            mode: 'nearest',
+            intersect: true,
+            animationDuration: 400,
+            onHover: function (event, chartElement) {
+              if (chartElement.length) {
+                event.target.style.cursor = 'pointer';
+              }
+            }
+          },
+          elements: {
+            line: {
+              borderWidth: 2,
+              hoverBorderWidth: 4
+            },
+            point: {
+              radius: 5,
+              hoverRadius: 8
+            }
+          },
+          plugins: {
+            legend: {
+              display: false
+            }
+          },
+          onClick: function (e, activeElements) {
+            if (activeElements.length) {
+              activeElements[0].element.options.borderColor = 'rgba(0, 0, 255, 1)';
+            }
+          }
+        }
+      });
+    </script>
   </body>
 
 </html>
