--- a/public/index.html
+++ b/public/index.html
@@ -269,7 +269,7 @@
           </div>
           <!-- Mobile Menu -->
           <div
-            class="mobile-menu hidden lg:hidden fixed inset-0 z-20 w-full min-h-screen overflow-y-auto bg-[#020202]/20 px-4">
+            class="fade-in mobile-menu hidden lg:hidden fixed inset-0 z-20 w-full min-h-screen overflow-y-auto bg-[#020202]/20 px-4">
             <div class="mobile-menu__content max-w-[35.25rem] bg-white rounded-md p-5 mx-auto mt-16 md:mt-20">
               <h5 class="font-semibold text-xl">Меню</h5>
               <!--  links  -->
@@ -317,7 +317,7 @@
           </div>
           <!-- Search Result -->
           <div
-            class="search-result w-full hidden min-h-screen bg-[#020202]/20 overflow-y-auto fixed inset-0 z-30 xs:px-4">
+            class="fade-in search-result w-full hidden min-h-screen bg-[#020202]/20 overflow-y-auto fixed inset-0 z-30 xs:px-4">
             <div
               class="search-result__content relative w-full max-w-2xl lg:max-w-[35.25rem] bg-white rounded-md p-4 xs:p-3 mx-auto mt-16 md:mt-5 lg:!mt-20">
               <!-- Search -->
@@ -1012,9 +1012,8 @@
               </div>
             </div>
           </div>
-
-          <!-- Korinka -->
-          <div class="product-modal hidden fixed inset-0 z-30 w-full min-h-screen overflow-y-auto bg-[#020202]/20">
+          <!-- Product Modal  -->
+          <div class="fade-in product-modal hidden fixed inset-0 z-30 w-full min-h-screen overflow-y-auto bg-[#020202]/20">
             <div
               class="product-modal__content relative w-full max-w-[45.0625rem] bg-white rounded-md pr-2 md:pr-8 lg:pr-42 p-4 md:py-7 lg:py-10 px-4 md:px-8 lg:px-42 mt-16 xs:mt-0 ml-auto">
               <div class="flex items-center justify-between gap-5">
