--- a/public/index.html
+++ b/public/index.html
@@ -95,7 +95,7 @@
                   </svg>
                 </button>
               </div>
-              <div class="options-result hidden absolute z-30 bg-white w-full rounded-md p-5 space-y-2">
+              <div class="fade-in options-result hidden absolute z-30 bg-white w-full rounded-md p-5 space-y-2">
                 <!-- 1 -->
                 <div class="cursor-pointer flex items-center gap-2">
                   <svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -269,8 +269,8 @@
           </div>
           <!-- Mobile Menu -->
           <div
-            class="fade-in mobile-menu hidden lg:hidden fixed inset-0 z-20 w-full min-h-screen overflow-y-auto bg-[#020202]/20 px-4">
-            <div class="mobile-menu__content max-w-[35.25rem] bg-white rounded-md p-5 mx-auto mt-16 md:mt-20">
+            class="mobile-menu hidden lg:hidden fixed inset-0 z-20 w-full min-h-screen overflow-y-auto bg-[#020202]/20 px-4">
+            <div class="fade-in mobile-menu__content max-w-[35.25rem] bg-white rounded-md p-5 mx-auto mt-16 md:mt-20">
               <h5 class="font-semibold text-xl">Меню</h5>
               <!--  links  -->
               <div class="flex flex-col gap-y-4 border-t pt-5 mt-5">
@@ -317,9 +317,9 @@
           </div>
           <!-- Search Result -->
           <div
-            class="fade-in search-result w-full hidden min-h-screen bg-[#020202]/20 overflow-y-auto fixed inset-0 z-30 xs:px-4">
+            class="search-result w-full hidden min-h-screen bg-[#020202]/20 overflow-y-auto fixed inset-0 z-30 xs:px-4">
             <div
-              class="search-result__content relative w-full max-w-2xl lg:max-w-[35.25rem] bg-white rounded-md p-4 xs:p-3 mx-auto mt-16 md:mt-5 lg:!mt-20">
+              class="fade-in search-result__content relative w-full max-w-2xl lg:max-w-[35.25rem] bg-white rounded-md p-4 xs:p-3 mx-auto mt-16 md:mt-5 lg:!mt-20">
               <!-- Search -->
               <div class="w-full">
                 <div class="relative">
@@ -343,7 +343,7 @@
                 </div>
               </div>
               <!-- Search Result Text -->
-              <div class="options-result__modal hidden mt-5 space-y-2">
+              <div class="fade-in options-result__modal hidden mt-5 space-y-2">
                 <!-- 1 -->
                 <div class="cursor-pointer flex items-center gap-2">
                   <svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -1013,14 +1013,15 @@
             </div>
           </div>
           <!-- Product Modal  -->
-          <div class="fade-in product-modal hidden fixed inset-0 z-30 w-full min-h-screen overflow-y-auto bg-[#020202]/20">
+          <div
+            class="fade-in product-modal hidden fixed inset-0 z-30 w-full min-h-screen overflow-y-auto bg-[#020202]/20">
             <div
               class="product-modal__content relative w-full max-w-[45.0625rem] bg-white rounded-md pr-2 md:pr-8 lg:pr-42 p-4 md:py-7 lg:py-10 px-4 md:px-8 lg:px-42 mt-16 xs:mt-0 ml-auto">
               <div class="flex items-center justify-between gap-5">
                 <h3>Товары в корзине</h3>
                 <!-- Exit Btn -->
                 <button
-                  class="product-exitBtn block font-thin text-brand-black-400 text-5xl/6 transition duration-200 hover:text-brand-green-400 md:-mr-2">
+                  class="product-exitBtn block font-thin text-brand-black-400 text-3xl lg:text-5xl/6 transition duration-200 hover:text-brand-green-400 md:-mr-2">
                   ×
                 </button>
               </div>
