Updated project with new features/fixes

--- a/public/contacts.html
+++ b/public/contacts.html
@@ -18,24 +18,24 @@
           <div class="hidden lg:flex items-center justify-between border-b px-5 py-4">
             <!--  links  -->
             <div class="flex items-center gap-x-4">
-              <a class="text-brand-black-400 transition duration-200 hover:text-brand-green-400 text-15" href=#">
+              <a class="text-brand-black-400 transition duration-200 hover:text-brand-green-400 text-15" href="#">
                 О проекте
               </a>
-              <a class="text-brand-black-400 transition duration-200 hover:text-brand-green-400 text-15" href=#">
+              <a class="text-brand-black-400 transition duration-200 hover:text-brand-green-400 text-15" href="#">
                 Доставка и оплата
               </a>
               <div class="flex items-center gap-1">
-                <a class="text-brand-black-400 transition duration-200 hover:text-brand-green-400 text-15" href=#">
+                <a class="text-brand-black-400 transition duration-200 hover:text-brand-green-400 text-15" href="#">
                   Отзывы
                 </a>
                 <p class="h-[1.125rem] bg-brand-green-400 text-white text-[0.8125rem]/[1.125rem] rounded px-1">
                   1253
                 </p>
               </div>
-              <a class="text-brand-black-400 transition duration-200 hover:text-brand-green-400 text-15" href=#">
+              <a class="text-brand-black-400 transition duration-200 hover:text-brand-green-400 text-15" href="#">
                 Статьи
               </a>
-              <a class="text-brand-black-400 transition duration-200 hover:text-brand-green-400 text-15" href=#">
+              <a class="text-brand-black-400 transition duration-200 hover:text-brand-green-400 text-15" href="./contacts.html">
                 Контакты
               </a>
             </div>
@@ -274,42 +274,42 @@
               <h5 class="font-semibold text-xl">Меню</h5>
               <!--  links  -->
               <div class="flex flex-col gap-y-4 border-t pt-5 mt-5">
-                <a class="text-brand-black-400 transition duration-200 hover:text-brand-green-400 text-2xl" href=#">
+                <a class="text-brand-black-400 transition duration-200 hover:text-brand-green-400 text-2xl" href="#">
                   О проекте
                 </a>
-                <a class="text-brand-black-400 transition duration-200 hover:text-brand-green-400 text-2xl" href=#">
+                <a class="text-brand-black-400 transition duration-200 hover:text-brand-green-400 text-2xl" href="#">
                   Доставка и оплата
                 </a>
                 <div class="flex items-center gap-1">
-                  <a class="text-brand-black-400 transition duration-200 hover:text-brand-green-400 text-2xl" href=#">
+                  <a class="text-brand-black-400 transition duration-200 hover:text-brand-green-400 text-2xl" href="#">
                     Отзывы
                   </a>
                   <p class="h-[1.125rem] bg-brand-green-400 text-white text-[0.8125rem]/[1.125rem] rounded px-1">
                     1253
                   </p>
                 </div>
-                <a class="text-brand-black-400 transition duration-200 hover:text-brand-green-400 text-2xl" href=#">
+                <a class="text-brand-black-400 transition duration-200 hover:text-brand-green-400 text-2xl" href="#">
                   Статьи
                 </a>
-                <a class="text-brand-black-400 transition duration-200 hover:text-brand-green-400 text-2xl" href=#">
+                <a class="text-brand-black-400 transition duration-200 hover:text-brand-green-400 text-2xl" href="./contacts.html">
                   Контакты
                 </a>
               </div>
               <!--  Buttons  -->
               <div class="flex flex-col gap-y-4 border-t pt-5 mt-5">
-                <a class="text-brand-black-400 transition duration-200 hover:text-brand-green-400 text-2xl" href=#">
+                <a class="text-brand-black-400 transition duration-200 hover:text-brand-green-400 text-2xl" href="#">
                   Каталог
                 </a>
-                <a class="text-brand-black-400 transition duration-200 hover:text-brand-green-400 text-2xl" href=#">
+                <a class="text-brand-black-400 transition duration-200 hover:text-brand-green-400 text-2xl" href="#">
                   Заказы
                 </a>
-                <a class="text-brand-black-400 transition duration-200 hover:text-brand-green-400 text-2xl" href=#">
+                <a class="text-brand-black-400 transition duration-200 hover:text-brand-green-400 text-2xl" href="#">
                   Корзина
                 </a>
-                <a class="text-brand-black-400 transition duration-200 hover:text-brand-green-400 text-2xl" href=#">
+                <a class="text-brand-black-400 transition duration-200 hover:text-brand-green-400 text-2xl" href="#">
                   Войти
                 </a>
-                <a class="text-brand-black-400 transition duration-200 hover:text-brand-green-400 text-2xl" href=#">
+                <a class="text-brand-black-400 transition duration-200 hover:text-brand-green-400 text-2xl" href="#">
                   Избранное
                 </a>
               </div>
