--- a/public/index.html
+++ b/public/index.html
@@ -258,8 +258,8 @@
         <div
           class="search-result w-full hidden min-h-screen bg-[#020202]/20 fixed inset-0 z-30 xs:px-4">
           <div
-            class="fade-in search-result__content relative w-full max-w-2xl lg:max-w-[35.25rem] bg-white rounded-md p-4 xs:p-3 mx-auto mt-16 md:mt-5 lg:!mt-20 md:!pt-12">
-            <div class="w-full max-h-[28.125rem] card-scroll overflow-y-auto mt-5 space-y-5 -mr-2 pr-2">
+            class="fade-in search-result__content relative w-full max-w-2xl lg:max-w-[35.25rem] bg-white rounded-md p-4 xs:p-3 pr-2 xs:pr-3 mx-auto mt-16 md:mt-5 lg:!mt-20 md:!pt-12">
+            <div class="w-full max-h-[28.125rem] card-scroll overflow-y-auto mt-5 space-y-5 -mr-4 xs:-mr-2 pr-2">
               <!-- Search -->
               <div class="block md:hidden w-full">
                 <div class="relative">
