--- a/public/index.html
+++ b/public/index.html
@@ -259,29 +259,29 @@
           class="search-result w-full hidden min-h-screen bg-[#020202]/20 fixed inset-0 z-30 xs:px-4">
           <div
             class="fade-in search-result__content relative w-full max-w-2xl lg:max-w-[35.25rem] bg-white rounded-md p-4 xs:p-3 pr-2 xs:pr-3 mx-auto mt-16 md:mt-5 lg:!mt-20 md:!pt-12">
-            <div class="w-full max-h-[28.125rem] card-scroll overflow-y-auto mt-5 space-y-5 -mr-4 xs:-mr-2 pr-2">
-              <!-- Search -->
-              <div class="block md:hidden w-full">
-                <div class="relative">
-                  <div class="absolute inset-y-0 start-0 flex items-center ps-19 pointer-events-none">
-                    <svg class="w-5 h-[1.375rem] text-gray-500 dark:text-gray-400" aria-hidden="true"
-                      xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
-                      <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                        d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z" />
-                    </svg>
-                  </div>
-                  <input type="text" id="default-search"
-                    class="search-input block w-full h-10 lg:h-12 p-4 ps-12 lg:text-[1.375rem]/[1] text-gray-900 border-2 border-brand-green-300 rounded-lg outline-none"
-                    placeholder="Найти любимый вкус" required />
-                  <button
-                    class="search-btn_exit bg-white absolute end-1 top-1/2 -translate-y-1/2 outline-none font-medium rounded-lg text-sm px-3">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                      stroke="currentColor" class="size-5">
-                      <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12" />
-                    </svg>
-                  </button>
+            <!-- Search -->
+            <div class="block md:hidden w-full">
+              <div class="relative">
+                <div class="absolute inset-y-0 start-0 flex items-center ps-19 pointer-events-none">
+                  <svg class="w-5 h-[1.375rem] text-gray-500 dark:text-gray-400" aria-hidden="true"
+                    xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                      d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z" />
+                  </svg>
                 </div>
+                <input type="text" id="default-search"
+                  class="search-input block w-full h-10 lg:h-12 p-4 ps-12 lg:text-[1.375rem]/[1] text-gray-900 border-2 border-brand-green-300 rounded-lg outline-none"
+                  placeholder="Найти любимый вкус" required />
+                <button
+                  class="search-btn_exit bg-white absolute end-1 top-1/2 -translate-y-1/2 outline-none font-medium rounded-lg text-sm px-3">
+                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                    stroke="currentColor" class="size-5">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12" />
+                  </svg>
+                </button>
               </div>
+            </div>
+            <div class="w-full max-h-[28.125rem] card-scroll overflow-y-auto mt-2 xs:mt-5 space-y-5 -mr-4 xs:-mr-2 pr-2">
               <!-- Search Result Text -->
               <div class="fade-in options-result hidden space-y-2">
                 <!-- 1 -->
