--- a/public/index.html
+++ b/public/index.html
@@ -281,9 +281,9 @@
                 </button>
               </div>
             </div>
-            <div class="w-full max-h-[28.125rem] card-scroll overflow-y-auto mt-2 xs:mt-5 space-y-5 -mr-4 xs:-mr-2 pr-2">
+            <div class="w-full max-h-[28.125rem] card-scroll overflow-y-auto mt-2 xs:mt-5 -mr-4 xs:-mr-2 pr-2">
               <!-- Search Result Text -->
-              <div class="fade-in options-result hidden space-y-2">
+              <div class="fade-in options-result hidden space-y-2 mb-4">
                 <!-- 1 -->
                 <div class="cursor-pointer flex items-center gap-2">
                   <svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -357,7 +357,7 @@
                 </div>
                 <hr>
               </div>
-              <div class="">
+              <div>
                 <h6 class="font-semibold lg:text-xl">Популярно сейчас</h6>
                 <!-- Carts Destktop -->
                 <div class="hidden xs:grid grid-cols-2 gap-y-8 gap-x-5 lg:gap-x-30 mt-4">
