--- a/public/catalog-factory.html
+++ b/public/catalog-factory.html
@@ -2059,7 +2059,12 @@
                 <h3>Фильтры</h3>
                 <!-- Exit Btn -->
                 <button
-                  class="filter-exit__btn block text-3xl lg:text-4xl transition duration-200 hover:text-brand-green-400 ml-auto">×</button>
+                  class="filter-exit__btn size-30 flex items-center justify-center text-white text-3xl lg:text-4xl leading-[0] transition duration-200 hover:opacity-80 rounded-full bg-green-500">
+                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                    stroke="currentColor" class="size-5">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12" />
+                  </svg>
+                </button>
               </div>
               <div class="h-[25rem] overflow-y-auto card-scroll -mr-2 pr-2 mt-8 lg:mt-0">
                 <!-- Filter 1 -->
