--- a/public/index.html
+++ b/public/index.html
@@ -362,7 +362,7 @@
                 <!-- Carts Destktop -->
                 <div class="hidden xs:grid grid-cols-2 gap-y-8 gap-x-5 lg:gap-x-30 mt-4">
                   <!-- Card 1 -->
-                  <div class="flex gap-2.5">
+                  <a href="#" class="flex gap-2.5">
                     <img class="size-14" src="./img/image-product__1.png" alt="image-product__1">
                     <div>
                       <div class="flex gap-1">
@@ -382,9 +382,9 @@
                       <h5 class="font-semibold text-xs lg:text-15 mt-2">Navy Blue Габа Улун</h5>
                       <p class="text-brand-dark text-10 lg:text-13/[1.125rem]">Черный чай т.е. категория</p>
                     </div>
-                  </div>
+                  </a>
                   <!-- Card 2 -->
-                  <div class="flex gap-2.5">
+                  <a href="#" class="flex gap-2.5">
                     <img class="size-14" src="./img/image-product__1.png" alt="image-product__1">
                     <div>
                       <div class="flex gap-1">
@@ -404,9 +404,9 @@
                       <h5 class="font-semibold text-xs lg:text-15 mt-2">Navy Blue Габа Улун</h5>
                       <p class="text-brand-dark text-10 lg:text-13/[1.125rem]">Черный чай т.е. категория</p>
                     </div>
-                  </div>
+                  </a>
                   <!-- Card 3 -->
-                  <div class="flex gap-2.5">
+                  <a href="#" class="flex gap-2.5">
                     <img class="size-14" src="./img/image-product__1.png" alt="image-product__1">
                     <div>
                       <div class="flex gap-1">
@@ -426,9 +426,9 @@
                       <h5 class="font-semibold text-xs lg:text-15 mt-2">Navy Blue Габа Улун</h5>
                       <p class="text-brand-dark text-10 lg:text-13/[1.125rem]">Черный чай т.е. категория</p>
                     </div>
-                  </div>
+                  </a>
                   <!-- Card 4 -->
-                  <div class="flex gap-2.5">
+                  <a href="#" class="flex gap-2.5">
                     <img class="size-14" src="./img/image-product__1.png" alt="image-product__1">
                     <div>
                       <div class="flex gap-1">
@@ -448,9 +448,9 @@
                       <h5 class="font-semibold text-xs lg:text-15 mt-2">Navy Blue Габа Улун</h5>
                       <p class="text-brand-dark text-10 lg:text-13/[1.125rem]">Черный чай т.е. категория</p>
                     </div>
-                  </div>
+                  </a>
                   <!-- Card 5 -->
-                  <div class="flex gap-2.5">
+                  <a href="#" class="flex gap-2.5">
                     <img class="size-14" src="./img/image-product__1.png" alt="image-product__1">
                     <div>
                       <div class="flex gap-1">
@@ -470,9 +470,9 @@
                       <h5 class="font-semibold text-xs lg:text-15 mt-2">Navy Blue Габа Улун</h5>
                       <p class="text-brand-dark text-10 lg:text-13/[1.125rem]">Черный чай т.е. категория</p>
                     </div>
-                  </div>
+                  </a>
                   <!-- Card 6 -->
-                  <div class="flex gap-2.5">
+                  <a href="#" class="flex gap-2.5">
                     <img class="size-14" src="./img/image-product__1.png" alt="image-product__1">
                     <div>
                       <div class="flex gap-1">
@@ -492,9 +492,9 @@
                       <h5 class="font-semibold text-xs lg:text-15 mt-2">Navy Blue Габа Улун</h5>
                       <p class="text-brand-dark text-10 lg:text-13/[1.125rem]">Черный чай т.е. категория</p>
                     </div>
-                  </div>
+                  </a>
                   <!-- Card 7 -->
-                  <div class="flex gap-2.5">
+                  <a href="#" class="flex gap-2.5">
                     <img class="size-14" src="./img/image-product__1.png" alt="image-product__1">
                     <div>
                       <div class="flex gap-1">
@@ -514,9 +514,9 @@
                       <h5 class="font-semibold text-xs lg:text-15 mt-2">Navy Blue Габа Улун</h5>
                       <p class="text-brand-dark text-10 lg:text-13/[1.125rem]">Черный чай т.е. категория</p>
                     </div>
-                  </div>
+                  </a>
                   <!-- Card 8 -->
-                  <div class="flex gap-2.5">
+                  <a href="#" class="flex gap-2.5">
                     <img class="size-14" src="./img/image-product__1.png" alt="image-product__1">
                     <div>
                       <div class="flex gap-1">
@@ -536,12 +536,12 @@
                       <h5 class="font-semibold text-xs lg:text-15 mt-2">Navy Blue Габа Улун</h5>
                       <p class="text-brand-dark text-10 lg:text-13/[1.125rem]">Черный чай т.е. категория</p>
                     </div>
-                  </div>
+                  </a>
                 </div>
                 <!-- Carts Mobile -->
                 <div class="xs:hidden grid grid-cols-2 gap-x-4 gap-y-5 lg:gap-30 mt-4 lg:mt-6">
                   <!-- Cart 1 -->
-                  <div class="border bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
+                  <a href="#" class="border bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
                     <div class="flex justify-between gap-5">
                       <button
                         class="bg-brand-green-400 text-white rounded h-max font-medium text-10 md:text-xs/3 px-2 py-1.5">
@@ -582,9 +582,9 @@
                         <span class="text-10 lg:text-13 text-brand-black-400">(132)</span>
                       </div>
                     </div>
-                  </div>
+                  </a>
                   <!-- Cart 2 -->
-                  <div class="border bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
+                  <a href="#" class="border bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
                     <div class="flex justify-between gap-5">
                       <button
                         class="bg-brand-green-400 text-white rounded h-max font-medium text-10 md:text-xs/3 px-2 py-1.5">
@@ -625,9 +625,9 @@
                         <span class="text-10 lg:text-13 text-brand-black-400">(132)</span>
                       </div>
                     </div>
-                  </div>
+                  </a>
                   <!-- Cart 3 -->
-                  <div class="border bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
+                  <a href="#" class="border bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
                     <div class="flex justify-between gap-5">
                       <button
                         class="bg-brand-green-400 text-white rounded h-max font-medium text-10 md:text-xs/3 px-2 py-1.5">
@@ -668,9 +668,9 @@
                         <span class="text-10 lg:text-13 text-brand-black-400">(132)</span>
                       </div>
                     </div>
-                  </div>
+                  </a>
                   <!-- Cart 4 -->
-                  <div class="border bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
+                  <a href="#" class="border bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
                     <div class="flex justify-between gap-5">
                       <button
                         class="bg-brand-green-400 text-white rounded h-max font-medium text-10 md:text-xs/3 px-2 py-1.5">
@@ -711,9 +711,9 @@
                         <span class="text-10 lg:text-13 text-brand-black-400">(132)</span>
                       </div>
                     </div>
-                  </div>
+                  </a>
                   <!-- Cart 5 -->
-                  <div class="border bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
+                  <a href="#" class="border bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
                     <div class="flex justify-between gap-5">
                       <button
                         class="bg-brand-green-400 text-white rounded h-max font-medium text-10 md:text-xs/3 px-2 py-1.5">
@@ -754,9 +754,9 @@
                         <span class="text-10 lg:text-13 text-brand-black-400">(132)</span>
                       </div>
                     </div>
-                  </div>
+                  </a>
                   <!-- Cart 6 -->
-                  <div class="border bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
+                  <a href="#" class="border bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
                     <div class="flex justify-between gap-5">
                       <button
                         class="bg-brand-green-400 text-white rounded h-max font-medium text-10 md:text-xs/3 px-2 py-1.5">
@@ -797,9 +797,9 @@
                         <span class="text-10 lg:text-13 text-brand-black-400">(132)</span>
                       </div>
                     </div>
-                  </div>
+                  </a>
                   <!-- Cart 7 -->
-                  <div class="border bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
+                  <a href="#" class="border bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
                     <div class="flex justify-between gap-5">
                       <button
                         class="bg-brand-green-400 text-white rounded h-max font-medium text-10 md:text-xs/3 px-2 py-1.5">
@@ -840,9 +840,9 @@
                         <span class="text-10 lg:text-13 text-brand-black-400">(132)</span>
                       </div>
                     </div>
-                  </div>
+                  </a>
                   <!-- Cart 8 -->
-                  <div class="border bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
+                  <a href="#" class="border bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
                     <div class="flex justify-between gap-5">
                       <button
                         class="bg-brand-green-400 text-white rounded h-max font-medium text-10 md:text-xs/3 px-2 py-1.5">
@@ -883,7 +883,7 @@
                         <span class="text-10 lg:text-13 text-brand-black-400">(132)</span>
                       </div>
                     </div>
-                  </div>
+                  </a>
                 </div>
               </div>
             </div>
